fix: hide modal background overflow

--- a/packages/interwovenkit-react/src/public/app/Modal.module.css
+++ b/packages/interwovenkit-react/src/public/app/Modal.module.css
@@ -5,6 +5,8 @@
 
   backdrop-filter: blur(4px);
   background-color: rgba(0, 0, 0, 0.5);
+
+  overflow: hidden;
 }
 
 .modal {
